platform/gitops/components/shared/rbac/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbac-system
  labels:
    darksite.cloud/rbac-profile: platform
    darksite.cloud/rbac-team: platform
    istio-injection: enabled
    observability.grafana.com/tenant: platform
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
